chore: bump test toolchain to JDK 25