@@ -20,7 +20,7 @@ group = "com.hivemq.helmcharts"
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -66,6 +66,13 @@ testing {
             }
             targets.configureEach {
                 testTask {
+                    jvmArgumentProviders.add(CommandLineArgumentProvider {
+                        listOf(
+                            // see https://netty.io/wiki/java-24-and-sun.misc.unsafe.html
+                            "--enable-native-access=ALL-UNNAMED",
+                            "--sun-misc-unsafe-memory-access=allow",
+                        )
+                    })
                     systemProperty("k3s.version.type", environment["K8S_VERSION_TYPE"] ?: "LATEST")
                     systemProperty("hivemq.edge.tag", libs.versions.hivemq.edge.get())
                     systemProperty("junit.jupiter.execution.timeout.mode", "disabled_on_debug")
